--- a/lib/filter/custom.css
+++ b/lib/filter/custom.css
@@ -191,7 +191,7 @@ input[type=checkbox] {
   opacity: 1;
 }
 #ucbi_idlo:cheked + label:before {
-  background: #663301;
+  background: black;
   opacity: 1;
 }
 
